--- a/pado_visualize/static_src/css/metadata.scss
+++ b/pado_visualize/static_src/css/metadata.scss
@@ -1,7 +1,10 @@
-// TODO - this is not working? Is it a problem with Parcel? I moved these classes into base.scss for now...
+@import "colors";
+
 
 .lineup_container {
     height: 100vh;
+    padding: 2rem;
+
     header {
         padding: 0em;
     }
@@ -10,4 +13,34 @@
 .action_container {
     text-align: center;
     background-color: blue;
+}
+
+.thumbnail {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    background: #f3f4f5;  /* fixme: make dynamic */
+
+    pointer-events: none;
+
+    img {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+}
+
+.icon-container {
+    span {
+        color: grey;
+        cursor: pointer;
+        margin-left: 50%;
+    }
+    span:hover {
+        color: $color-primary-light;
+    }
 }
