metadata: fix lineup padding

--- a/pado_visualize/static_src/css/metadata.scss
+++ b/pado_visualize/static_src/css/metadata.scss
@@ -3,10 +3,11 @@
 
 .lineup_container {
     height: 100vh;
-    padding: 2rem;
+    padding: 1em 0 0 1em;
+    box-sizing: border-box;
 
     header {
-        padding: 0em;
+        padding: 0;
     }
 }
 
