metadata: fix lineup bottom padding issue

--- a/pado_visualize/templates/metadata/index.html
+++ b/pado_visualize/templates/metadata/index.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
 
-
 {% block styles %}
   {{ super() }}
   <link href="{{ url_for('static', filename='metadata.css') }}" rel="stylesheet">
@@ -9,7 +8,7 @@
 
 {% block content %}
 <div class="lineup_container" >
-  <div id="lineup" style="height: 100vh;"/>
+  <div id="lineup"></div>
 </div>
 {% endblock content %}
 
@@ -27,20 +26,3 @@
     });
   </script>
 {% endblock page_scripts %}
-
-<style>
-.lineup_container {
-  background-color: grey;
-  height: 100vh;
-  border: 2px blue solid;
-}
-
-.lineup_container header {
-  padding: 0em;
-}
-
-.action_container {
-    text-align: center;
-    background-color: blue;
-}
-</style>
