openseadragon: remove progress bar when loaded

--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -38,6 +38,9 @@
           if (progress < 100) {
               setTimeout(changeProgress, 200);
           }
+          else {
+            setTimeout(() => {progressOverlay.style.display = "none"}, 1000);
+          }
       }).catch(err => {throw err});
     };
     changeProgress();
