metadata: fancy rendering for annotator type

--- a/pado_visualize/static_src/css/metadata.scss
+++ b/pado_visualize/static_src/css/metadata.scss
@@ -45,7 +45,7 @@
         cursor: pointer;
         margin-left: 50%;
     }
-    span:hover {
+    .button:hover {
         color: $color-primary-light;
     }
 }
