--- a/pado_visualize/static_src/css/metadata.scss
+++ b/pado_visualize/static_src/css/metadata.scss
@@ -30,6 +30,10 @@
     pointer-events: none;
 
     img {
+
+        .table_thumbnail {
+            height: 200%;
+        }
         position: absolute;
         top: 0;
         bottom: 0;
@@ -37,6 +41,9 @@
         right: 0;
         margin: auto;
     }
+}
+.table_thumbnail {
+    height: 300% !important;
 }
 
 .icon-container {
@@ -47,5 +54,8 @@
     }
     .button:hover {
         color: $color-primary-light;
+    }
+    .grouped {
+        margin-top: 50%;
     }
 }
