slides: allow scrolling in custom multiselect

--- a/pado_visualize/static_src/css/slides.scss
+++ b/pado_visualize/static_src/css/slides.scss
@@ -191,6 +191,7 @@ span.filter-label {
   border-radius: 5px;
   margin-top: 8px;
   background-color: rgb(235, 235, 235);
+  overflow-y: scroll;
 }
 
 .multiselect-item {
