--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -20,6 +20,13 @@
 <script type="text/javascript">
     'use strict';
 
+    // image url
+    {% if image_prediction_idx is none %}
+    const imageUrl = "{{ url_for('slides.slide_dzi', image_id=image_id) }}";
+    {% else %}
+    const imageUrl = "{{ url_for('slides.slide_dzi', image_id=image_id, image_prediction_idx=image_prediction_idx) }}";
+    {% endif %}
+
     // progress bar
     const progressUrl = "{{ url_for('slides.cache_status', image_id=image_id) }}";
     const progressBar = document.querySelector(".progress");
@@ -48,7 +55,7 @@
     // setup the slide viewer
     pavo.slides_openseadragon.setupOpenSeadragonViewer({
         id: "seadragon-container",
-        tileSources: "{{ url_for('slides.slide_dzi', image_id=image_id) }}",
+        tileSources: imageUrl,
         prefixUrl: "{{ url_for('static', filename='images/openseadragon/') }}",
     },{
         annotationUrl: "{{ url_for('slides.serve_w3c_annotations', image_id=image_id) }}",
