--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -22,9 +22,16 @@
 
     // image url
     {% if image_prediction_idx is none %}
-    const imageUrl = "{{ url_for('slides.slide_dzi', image_id=image_id) }}";
+    const imageUrl = [{
+        tileSource: "{{ url_for('slides.slide_dzi', image_id=image_id) }}",
+    }];
     {% else %}
-    const imageUrl = "{{ url_for('slides.slide_dzi', image_id=image_id, image_prediction_idx=image_prediction_idx) }}";
+    const imageUrl = [{
+        tileSource: "{{ url_for('slides.slide_dzi', image_id=image_id) }}",
+    }, {
+        tileSource: "{{ url_for('slides.slide_dzi', image_id=image_id, image_prediction_idx=image_prediction_idx) }}",
+        opacity: 0.4,
+    }];
     {% endif %}
 
     // progress bar
