--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -175,6 +175,35 @@ $menu-text-color-subtle: #bbb;
         padding-left: 6px;
       }
     }
+
+    input[type="checkbox"] {
+      accent-color: $color-primary-light;
+      flex-direction: row;
+      width: 16px;
+      height: 16px;
+      margin-top: 2px;
+      margin-left: 18px;
+      padding: 10px 10px;
+      font-weight: 300;
+      border-radius: $menu-border-radius;
+      text-decoration: none;
+      background: rgba(255, 255, 255, 0.0);
+      transition: background 400ms, color 400ms;
+
+      :after {
+        content: "\f05d";
+      }
+
+      + label {
+        display: inline-flex;
+        color: $menu-text-color-subtle;
+        padding-left: 8px;
+        font-weight: 300;
+        margin-top: 0;
+        vertical-align: top;
+      }
+    }
+
   }
 
   .menu-item.active {
