pado_visualize: show name on osd view

--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -245,6 +245,7 @@ $menu-text-color-subtle: #bbb;
     margin-top: 1px;
     margin-bottom: 2px;
     font-weight: 200;
+    margin-inline-start: 20px;
   }
 
 }
