--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -131,6 +131,18 @@ $menu-text-color-subtle: #bbb;
       color: $menu-text-color-subtle;
       text-transform: lowercase;
     }
+
+    span.host {
+      margin-top: 3px;
+      font-weight: 50;
+      font-size: 9px;
+      grid-column: 1 / 3;
+      color: $color-primary-light;
+      text-transform: lowercase;
+      text-align: center;
+      opacity: 0.5;
+    }
+
   }
 }
 
