--- a/pado_visualize/templates/sidebar.html
+++ b/pado_visualize/templates/sidebar.html
@@ -15,13 +15,14 @@
   {%- endfor -%}
 {%- endmacro %}
 
+{% set instance_name = pado_instance_name() %}
 
 <div class="pado-sidebar container">
   <div class="header">
     <a href="{{ url_for('home.index') }}">
       <h2>Pado Visualize</h2>
       <h3>Pathological Data Obsession</h3>
-      <span class="host">{{ pado_instance_name() or "" }}</span>
+      {% if instance_name %}<span class="host">{{ pado_instance_name() or "" }}</span>{% endif %}
       <img alt="logo" title="{{ version_info() }}" src="{{ url_for('static', filename='images/pathological-heart.jpg') }}">
     </a>
   </div>
