--- a/pado_visualize/static_src/css/metadata.scss
+++ b/pado_visualize/static_src/css/metadata.scss
@@ -21,7 +21,7 @@
     background-color: blue;
 }
 
-.thumbnail {
+.thumbnail-container {
     position: relative;
     width: 100%;
     height: 100%;
@@ -30,7 +30,9 @@
 
     pointer-events: none;
 
-    img {
+    img.thumbnail {
+        width: initial;
+        height: initial;
         position: absolute;
         top: 0;
         bottom: 0;
