--- a/pado_visualize/static_src/css/metadata.scss
+++ b/pado_visualize/static_src/css/metadata.scss
@@ -22,23 +22,18 @@
 }
 
 .thumbnail-container {
-    position: relative;
     width: 100%;
     height: 100%;
-
     background: #f3f4f5;  /* fixme: make dynamic */
-
     pointer-events: none;
+    display: flex;
+    flex-flow: row;
 
     img.thumbnail {
         width: initial;
         height: initial;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
         margin: auto;
+        flex: auto;
     }
 }
 
