pado_visualize: fix toggle 2

--- a/pado_visualize/templates/slides/viewer_openseadragon.html
+++ b/pado_visualize/templates/slides/viewer_openseadragon.html
@@ -85,6 +85,7 @@
         },
       {%- endfor %}
     ];
+    window.imagePredictionTileSources = imagePredictionTileSources;
 
     // connect checkboxes
     if (hasAnnotations) {
