--- a/pavo/templates/layout.html
+++ b/pavo/templates/layout.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>{% block title %}{{ page_title_prefix|default("pado_visualize ::") }} {{ page_title }}{% endblock title %}</title>
+  <title>{% block title %}{{ page_title_prefix|default("pavo ::") }} {{ page_title }}{% endblock title %}</title>
 
   <link rel="icon" type="image/x-icon" href="{{ url_for_versioned('static', filename='favicon.ico') }}">
 
